# bazel-central-registry

./: rules_bzlmodrio_toolchains.20241002-005712.json
json/bzlmodrio-libssh/0.95-6/: config.json
json/rules_spotless/2.34.0/: MODULE.bazel  config.json
json/rules_wpi_styleguide/1.0.0/: MODULE.bazel  config.json
json/rules_wpiformat/2022.30/: config.json
modules/bzlmodrio/: metadata.json
modules/bzlmodrio-allwpilib/: metadata.json
modules/bzlmodrio-allwpilib/2022.3.1/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2022.4.1/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2023.1.1/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2023.2.1/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2023.2.1-1/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2023.3.2/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2023.4.1/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2023.4.2/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2023.4.3/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2024.1.1/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2024.1.1-beta-1/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2024.1.1-beta-2/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2024.1.1-beta-3/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2024.1.1-beta-4/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2024.2.1/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2024.3.1/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2024.3.2/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2025.1.1/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2025.1.1-beta-1/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2025.1.1-beta-1.bcr1/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2025.1.1-beta-2/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2025.1.1-beta-3/: MODULE.bazel  source.json
modules/bzlmodrio-allwpilib/2025.2.1/: MODULE.bazel  source.json
modules/bzlmodrio-apriltaglib/: metadata.json
modules/bzlmodrio-apriltaglib/2024.3.3.0-1/: MODULE.bazel  source.json
modules/bzlmodrio-apriltaglib/2024.3.3.0-2/: MODULE.bazel  source.json
modules/bzlmodrio-apriltaglib/3.2.0-3/: MODULE.bazel  source.json
modules/bzlmodrio-apriltaglib/3.2.0-4/: MODULE.bazel  source.json
modules/bzlmodrio-apriltaglib/3.2.0-5/: MODULE.bazel  source.json
modules/bzlmodrio-apriltaglib/3.2.0-8/: MODULE.bazel  source.json
modules/bzlmodrio-apriltaglib/3.3.0-1/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/: metadata.json
modules/bzlmodrio-choreolib/2024.1.2/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/2024.1.3/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/2024.2.2/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/2024.2.3/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/2025.0.0/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/2025.0.0-beta-2/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/2025.0.0-beta-3/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/2025.0.0-beta-5/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/2025.0.0-beta-6/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/2025.0.0-beta-8/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/2025.0.0-beta-9/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/2025.0.1/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/2025.0.2/: MODULE.bazel  source.json
modules/bzlmodrio-choreolib/2025.0.3/: MODULE.bazel  source.json
modules/bzlmodrio-imgui/: metadata.json
modules/bzlmodrio-imgui-source-gl3w/: metadata.json
modules/bzlmodrio-imgui-source-gl3w/imgui-1.89.1-2/: MODULE.bazel  presubmit.yml  source.json
modules/bzlmodrio-imgui-source-glfw/: metadata.json
modules/bzlmodrio-imgui-source-imgui/: metadata.json
modules/bzlmodrio-imgui-source-implot/: metadata.json
modules/bzlmodrio-imgui-source-stb/: metadata.json
modules/bzlmodrio-libssh/: metadata.json
modules/bzlmodrio-navx/: metadata.json
modules/bzlmodrio-ni/: metadata.json
modules/bzlmodrio-opencv/: metadata.json
modules/bzlmodrio-pathplannerlib/: metadata.json
modules/bzlmodrio-phoenix/: metadata.json
modules/bzlmodrio-phoenix6/: metadata.json
modules/bzlmodrio-photonlib/: metadata.json
modules/bzlmodrio-photonlib/v2024.2.2/: MODULE.bazel  source.json
modules/bzlmodrio-photonlib/v2025.0.0-beta-5/: MODULE.bazel  source.json
modules/bzlmodrio-photonlib/v2025.0.0-beta-8/: MODULE.bazel  source.json
modules/bzlmodrio-revlib/: metadata.json
modules/bzlmodrio-studica/: metadata.json
modules/rules_bazelrio/: metadata.json
modules/rules_bzlmodrio_jdk/: metadata.json
modules/rules_bzlmodrio_toolchains/: metadata.json
modules/rules_checkstyle/: metadata.json
modules/rules_pmd/: metadata.json
modules/rules_roborio_toolchain/: metadata.json
modules/rules_spotless/: metadata.json
modules/rules_wpi_styleguide/: metadata.json
modules/rules_wpiformat/: metadata.json
tools/: add_module.py  registry.py
(+439 files in other folders)
